--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Aman Mender",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "PORT=3030 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
@@ -20,6 +21,8 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
